tests/negative/test_switch_bad_branch_keyword.orb
fnc main() {
    switch (1) {
    if 1:
    }
}